src/objects/cb5__CBAllocationTerm__c.object
<CustomObject>
    <fields>
        <fullName>cb5__CBCalculationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Calculation Rule</label>
        <referenceTo>cb5__CBCalculationRule__c</referenceTo>
        <relationshipLabel>CB Allocation Terms</relationshipLabel>
        <relationshipName>CBAllocationTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Part__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Part</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>cb5__PeriodUnit__c</fullName>
        <defaultValue>&apos;Month&apos;</defaultValue>
        <label>Period Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                    <default>true</default>
                    <label>Month</label>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__Shift__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shift</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CB Allocation Term</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Allocation Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>